# cold-clear

./: .gitignore  Cargo.toml  FAQ.md  README.md  cc.js  cc_bg.wasm  index.html  rustfmt.toml  worker.js
.github/workflows/: c-api.yml  client.yml
battle/: Cargo.toml
battle/src/: battle.rs  controller.rs  game.rs  lib.rs
bot/: Cargo.toml
bot/src/: controller.rs  dag.rs  desktop.rs  display.rs  evaluation.rs  lib.rs  main.rs  misa.rs  moves.rs  opener_book.rs  tree.rs  web.rs
bot/src/evaluation/: changed.rs  misalike.rs  mod.rs  naive.rs  pattern.rs  pattern_builder.rs  standard.rs
bot/src/modes/: mod.rs  normal.rs  pcloop.rs
bot/src/opener_book/: pco.rs  viper.rs
c-api/: Cargo.toml  coldclear.h
c-api/src/: lib.rs
cc-client/: .gitignore  Cargo.toml  index.html  worker.js
cc-client/src/: battle_ui.rs  input.rs  lib.rs  main.rs  player_draw.rs  realtime.rs  replay.rs  res.rs
compare/: Cargo.toml
compare/src/: input.rs  main.rs
ga-arena/: Cargo.toml
ga-arena/src/: battle.rs  main.rs  mutate.rs
gui/: Cargo.toml  build.rs  worker.js
gui/src/: battle_ui.rs  common.rs  control-help  desktop.rs  input.rs  interface.rs  lib.rs  local.rs  main.rs  options-header  player_draw.rs  realtime.rs  replay.rs  res.rs
libtetris/: Cargo.toml
libtetris/src/: board.rs  fumen_conv.rs  gameplay.rs  lib.rs  lock_data.rs  moves.rs  pcf_conv.rs  piece.rs
opening-book/: Cargo.toml
opening-book/book-builder/: Cargo.toml
opening-book/book-builder/openers/: bt-loop  dpc  dt-cannon  hachispin  low-priority-c-spin  mko  mountainous-stacking-2  okey-cannon
opening-book/book-builder/openers/6-line-tsd-tsd-pc/: black-tea-cannon  tki-flat-topnt  tki-fronzie
opening-book/book-builder/src/: main.rs
opening-book/openers/: ajanba-tki  black-tea-cannon  extra-6high-2tsd-pc  gamushiro  honey-cup  new-dt-cannon  okey-cannon  pc-spin-okey  sakanas-first  tki-castle-top  tki-flat-top  tki-fronzie
opening-book/openers/6-line-tsd-tsd-pc/: ajanba-tki  black-tea-cannon  extra  tki-castle-top  tki-flat-top  tki-flat-topnt  tki-fronzie
opening-book/pc-gen/: Cargo.toml
opening-book/pc-gen/src/: main.rs
opening-book/src/: builder.rs  convert.rs  data.rs  dictionary  lib.rs  main.rs
optimizer/: Cargo.toml
optimizer/src/: battle.rs  main.rs  mutate.rs
src/: display.rs  evaluation.rs  main.rs  moves.rs  tetris.rs  tree.rs
src/evaluation/: mod.rs
tbi/: Cargo.toml
tbi/src/: main.rs  tbi.rs
tbp/: Cargo.toml
tbp/src/: lib.rs  main.rs
