[workspace]

members = [
    "bot",
    "libtetris",
    "battle",
    "gui",
    "opening-book",
    "c-api",
    "compare",
    "optimizer",
    "opening-book/book-builder",
    "opening-book/pc-gen"
]

[patch.crates-io.enumset_derive]
git = "https://github.com/ocboogie/enumset"
branch = "span-fix"
