[package]
name = "cold-clear"
version = "0.1.0"
authors = ["MinusKelvin <minuskelvin.carlson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.4.11"
rand = "0.7.0"
enumset = "0.4.0"
libtetris = { path = "../libtetris" }
enum-map = "0.6.0"
odds = { version = "0.3.1", features = ["std-vec"] }
serde = { version = "1", features = ["derive"] }
smallvec = "1.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.2.1"
