[package]
name = "cold-clear"
version = "0.1.0"
authors = ["MinusKelvin <minuskelvin.carlson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.5"
rand = "0.7.0"
enumset = "1.0.4"
opening-book = { path = "../opening-book" }
enum-map = { version = "0.6.0", features = ["serde"] }
odds = { version = "0.3.1", features = ["std-vec"] }
serde = { version = "1", features = ["derive"] }
smallvec = "1.0"
serde-big-array = "0.2.0"
bumpalo = { version = "3.4.0", features = ["collections"] }
ouroboros = "0.14.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libtetris = { path = "../libtetris", features = ["pcf"] }
rayon = "1.2.1"
crossbeam-channel = "0.4"
pcf = { git = "https://github.com/MinusKelvin/pcf", rev = "64cd955" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
libtetris = { path = "../libtetris" }
webutil = { git = "https://github.com/MinusKelvin/webutil", rev = "5a54126" }
futures-util = "0.3"
getrandom = { version = "0.1", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1.6"
