[package]
name = "c-api"
version = "0.1.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cold_clear"
crate-type = ["cdylib", "staticlib"]

[dependencies]
cold-clear = { path = "../bot" }
libtetris = { path = "../libtetris" }
enumset = "1.0.4"
