[package]
name = "compare"
version = "0.1.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battle = { path = "../battle" }
bot = { path = "../bot" }
libtetris = { path = "../libtetris" }
serde = { version = "1", features = ["derive"] }
bincode = "1"
libflate = "0.1"
rand = "0.7.0"
statrs = "0.11.0"