[package]
name = "ga-arena"
version = "0.1.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libtetris = { path = "../libtetris" }
bot = { path = "../bot" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arrayvec = "0.4.11"
rand = "0.7.0"
rand_pcg = "0.2.0"