[package]
name = "gui"
version = "0.1.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"
default-run = "gui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game-util = { git = "https://github.com/MinusKelvin/game-util-rs", rev = "8621d0f" }
cold-clear = { path = "../bot" }
libtetris = { path = "../libtetris" }
battle = { path = "../battle" }
arrayvec = "0.4.11"
rand = "0.7.3"
gilrs = { version = "0.7.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.11"
bincode = "1.2"
libflate = "0.1"

[build-dependencies]
build-utils = { git = "https://github.com/MinusKelvin/game-util-rs", rev = "8621d0f" }
