[package]
name = "libtetris"
version = "0.1.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.4.11", features = ["serde-1"] }
rand = "0.7.0"
rand_pcg = "0.2.0"
enumset = "0.4.0"
enum-map = "0.6.0"
serde = { version = "1", features = ["derive"] }