[package]
name = "libtetris"
version = "0.1.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.5", features = ["serde"] }
enumset = { version = "1.0", features = ["serde"] }
enum-map = "0.6.0"
serde = { version = "1", features = ["derive"] }
rand = "0.7.0"