[package]
name = "opening-book"
version = "0.1.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libtetris = { path = "../libtetris" }
enumset = { version = "0.4.0", features = ["serde"] }
serde = "1.0"
bincode = "1.3.1"
arrayvec = "0.5.1"
xz2 = "0.1.6"

[features]
builder = []
