[package]
name = "opening-book"
version = "0.1.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libtetris = { path = "../libtetris" }
enumset = { version = "1.0.4", features = ["serde"] }
serde = "1.0"
bincode = "1.3.1"
arrayvec = "0.5"
smallvec = { version = "1.6.1", optional = true, features = ["union", "serde"] }
rayon = { version = "1.5.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
xz2 = "0.1.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
lzma-rs = "0.1.3"

[features]
builder = ["smallvec", "rayon"]
