[package]
name = "tbp"
version = "0.1.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cold-clear = { path = "../bot" }
libtetris = { path = "../libtetris" }
serde = { version = "1.0.124", features = ["derive"] }
serde-big-array = "0.3.2"
serde_json = "1.0.64"

[dependencies.tbp]
git = "https://github.com/tetris-bot-protocol/tbp-rs"
branch = "main"
features = [
    "randomizer"
]
