[package]
name = "cc-tbp"
version = "0.1.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cold-clear = { path = "../bot" }
futures = "0.3.16"
libtetris = { path = "../libtetris" }
serde = { version = "1.0.124", features = ["derive"] }
serde-big-array = "0.3.2"
serde_json = "1.0.64"

[dependencies.tbp]
git = "https://github.com/tetris-bot-protocol/tbp-rs"
branch = "main"
features = [
    "randomizer"
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.23"
web-sys = { version = "0.3.50", features = ["DedicatedWorkerGlobalScope"] }
