[package]
name = "book-builder"
version = "0.1.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opening-book = { path = "..", features = ["builder"] }
libtetris = { path = "../../libtetris" }
fumen = "0.1.1"
permutator = "0.4.0"
enumset = "0.4.0"
